# pdf-intake

./: .gitignore  INSTALL.md  LICENSE  README.md  example.config.toml  pyproject.toml
pdf_intake/: bibtex.py  cli.py  config.py  convert.py  errors.py  index.py  metadata.py  ocr.py  review.py  slug.py  summarize.py
pdf_intake/prompts/: curiosity.md  metadata.md  professional.md  research.md  teaching.md
skills/pdf-inbox/: SKILL.md
